update gitignore in order to ship v8

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,16 @@
 /build
 /config.lua
 /objs
-/other/*/include
-/other/*/lib
-/other/*/linux
-/other/*/mac
-/other/*/windows
+/other/sdl/include
+/other/sdl/lib
+/other/sdl/linux
+/other/sdl/mac
+/other/sdl/windows
+/other/freetype/include
+/other/freetype/lib
+/other/freetype/linux
+/other/freetype/mac
+/other/freetype/windows
 __pycache__/
 *.dll
 *.dmg
