v8pp include dir in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1577,12 +1577,15 @@ if(CLIENT)
   )
   target_link_libraries(${TARGET_CLIENT} ${LIBS_CLIENT})
 
+  set(V8PP_INCLUDE_DIR src/engine/external/v8pp) # TODO: move xd
+
   target_include_directories(${TARGET_CLIENT} PRIVATE
     ${FREETYPE_INCLUDE_DIRS}
     ${PNGLITE_INCLUDE_DIRS}
     ${SDL2_INCLUDE_DIRS}
     ${V8_INCLUDE_DIRS}
     ${WAVPACK_INCLUDE_DIRS}
+    ${V8PP_INCLUDE_DIR}
   )
 
   set(PARAMS "${WAVPACK_INCLUDE_DIRS};${WAVPACK_INCLUDE_DIRS}")
